--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start-browser": "ng serve --open",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
